# api/dto/phieu_muon.go
@@ -1,0 +1,8 @@
+package dto
+
+type PhieuMuonDto struct {
+	MaPhieuMuon string `json:"maPhieuMuon"`
+	MaDocGia    string `json:"maDocGia"`
+	NgayMuon    string `json:"ngayMuon"`
+	MaSach      string `json:"maSach"`
+}
