# core/entity/phieu_muon.go
@@ -9,3 +9,14 @@ type PhieuMuon struct {
 	*Sach
 	*PhieuTra
 }
+
+func NewPhieuMuon(docGia *DocGia, ngayMuon *time.Time, sach *Sach, phieuTra *PhieuTra) *PhieuMuon {
+	id := NewID()
+	return &PhieuMuon{
+		MaPhieuMuon: &id,
+		DocGia:      docGia,
+		NgayMuon:    ngayMuon,
+		Sach:        sach,
+		PhieuTra:    phieuTra,
+	}
+}
